--- a/test-output/old/NopCommerce/classes.html
+++ b/test-output/old/NopCommerce/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.nopcommerce.user.Level_04_Multi_Browser</td>
+<td>com.nopcommerce.user.Level_05_Page_Factory</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_03_Not_Found_Email</td>
+<td>Login_05_Existing_Email_Wrong_Password</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_05_Existing_Email_Wrong_Password</td>
+<td>Login_03_Not_Found_Email</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -23,11 +23,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_06_Valid_Email_Password</td>
+<td>Login_04_Existing_Email_Empty_Password</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_04_Existing_Email_Empty_Password</td>
+<td>Login_06_Valid_Email_Password</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
